fix: Improve spacing around the navbar and the highlighting box for active in css/styles.css.

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,31 @@ body a:hover {
   text-underline-offset: 0.3em;
 }
 
+.navbar {
+  background-color: #3459e6;
+  color: #fdfdff;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.navbar .nav-item {
+  margin-top: 0.5em;
+  margin-right: 0.5rem;
+  margin-left: 0.5rem;
+  margin-bottom: 0.5em;
+}
+
+.navbar-toggler-icon {
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: middle;
+  background-image: var(--bs-navbar-toggler-icon-bg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+}
+
 .navbar .navbar-nav .nav-link.active {
   color: #fdfdff !important;
   box-shadow: 0 0 0 2px #fdfdff;
